# LabFor1Sem

./: .gitignore  CMakeLists.txt  Makefile  Makefile_Dynam_Dec  Makefile_Dynam_Enc  Makefile_Stat_Dec  Makefile_Stat_Enc  README.md
src/: mainDecoded.c  mainEncoded.c  stringTools.c  stringTools.h
src/cryptLib/: CryptCoder.c  CryptCoder.h  cryptManager.c  cryptManager.h
src/dynamicString/: core.c  core.h  tools.c  tools.h
src/stringUtil/: functionChecks.c  functionChecks.h  functionSpaceDelete.c  functionSpaceDelete.h  functionStrip.c  functionStrip.h  functionUpperLower.c  functionUpperLower.h
